[package]
name = "sadb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sadb"
path = "src/main.rs"

[lib]
name = "sadb"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dialoguer = "0.11"
ctrlc = "3.0"
